# DevConnect

./: readme.md
backend/: Cargo.toml  bun.lockb  diesel.toml  package.json  server.ts  tsconfig.json
backend/migrations/2025-02-28-071041_create_users/: up.sql
backend/migrations/2025-03-01-043323_create_all_tables/: down.sql  up.sql
backend/migrations/2025-03-01-071347_comment_update/: down.sql  up.sql
backend/migrations/2025-03-01-072140_posts_update/: down.sql  up.sql
backend/prisma/: schema.prisma
backend/prisma/migrations/20250306125142_dev_connect_v1/: migration.sql
backend/src/: main.rs  schema.rs
backend/src/db/: mod.rs
backend/src/enums/: http.ts  index.ts
backend/src/errors/: index.ts  mod.rs
backend/src/handlers/: mod.rs  user.rs
backend/src/models/: user.rs
backend/src/repositories/: index.ts  post-repository-interface.ts  post-repository.ts  user-repository-interface.ts  user-repository.ts
backend/src/routes/: app-router.ts  auth-router.ts  index.ts  post-router.ts  user-router.ts  user.router.ts
backend/src/routes/users/: user-get.route.ts  user-post.route.ts
backend/src/schemas/: comment.schema.ts  index.ts  post.schema.ts  post.ts  user.ts
backend/src/services/: index.ts  post.service.ts  service.ts  user.service.ts
backend/src/utils/: fastify.ts  index.ts
web/: bun.lockb  package.json
web/src/app/: fonts.ts  globals.css  layout.tsx
web/src/app/(private)/: layout.tsx
web/src/app/(public)/: page.tsx
web/src/components/(Private)/: nav.tsx
web/src/schemas/: user.ts
web/src/utils/: cn.ts
(+15 files in other folders)
